fixing css link bug

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet"
-        href="/Users/sekoyahicks/Desktop/fundamentals/Project_1/https:/github.com/JoepardyGame/style.css">
+        href="./style.css">
     
     <title>Jeopardy</title>
 </head>
