Question shows in modal now.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
             <div class="modal">
 
+                <div class="question">
+                    dsfapk
+                </div>
+
             </div>
 
         </div>
