Added additional question to see if for loop truly works.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
             <div class="modal">
 
                 <div class="question">
-                    dsfapk
                 </div>
-
+                <div class="answer1">
+                        hgjhkj
+                </div>
+                <div class="answer2">
+                        hgjhkj
+                </div>
+                <div class="answer3">
+                        hgjhkj
+                </div>
             </div>
 
         </div>
@@ -40,44 +47,44 @@
             <div class="square" id="0100">100</div>
             <div class="square" id="1100">100</div>
             <div class="square" id="2100">100</div>
-            <div class="square"><a href="modal.html" id="3100">100</a></div>
-            <div class="square"><a href="modal.html" id="4100">100</a></div>
+            <div class="square" id="3100">100</div>
+            <div class="square" id="4100">100</div>
         </div>
 
         <div class="row">
-            <div class="square"><a href="modal.html" id="button">200</a></div>
-            <div class="square"><a href="modal.html" id="button">200</a></div>
-            <div class="square"><a href="modal.html" id="button">200</a></div>
-            <div class="square"><a href="modal.html" id="button">200</a></div>
-            <div class="square"><a href="modal.html" id="button">200</a></div>
+            <div class="square" id="0200">200</div>
+            <div class="square" id="1200">200</div>
+            <div class="square" id="2200">200</div>
+            <div class="square" id="3200">200</div>
+            <div class="square" id="4200">200</div>
         </div>
 
         <div class="row">
-            <div class="square"><a href="modal.html" id="button">300</a></div>
-            <div class="square"><a href="modal.html" id="button">300</a></div>
-            <div class="square"><a href="modal.html" id="button">300</a></div>
-            <div class="square"><a href="modal.html" id="button">300</a></div>
-            <div class="square"><a href="modal.html" id="button">300</a></div>
+            <div class="square" id="0300">300</div>
+            <div class="square" id="1300">300</div>
+            <div class="square" id="2300">300</div>
+            <div class="square" id="3300">300</div>
+            <div class="square" id="4300">300</div>
         </div>
 
         <div class="row">
-            <div class="square"><a href="modal.html" id="button">400</a></div>
-            <div class="square"><a href="modal.html" id="button">400</a></div>
-            <div class="square"><a href="modal.html" id="button">400</a></div>
-            <div class="square"><a href="modal.html" id="button">400</a></div>
-            <div class="square"><a href="modal.html" id="button">400</a></div>
+            <div class="square" id="0400">400</div>
+            <div class="square" id="1400">400</div>
+            <div class="square" id="2400">400</div>
+            <div class="square" id="3400">400</div>
+            <div class="square" id="4400">400</div>
         </div>
 
         <div class="row">
-            <div class="square"><a href="modal.html" id="button">500</a></div>
-            <div class="square"><a href="modal.html" id="button">500</a></div>
-            <div class="square"><a href="modal.html" id="button">500</a></div>
-            <div class="square"><a href="modal.html" id="button">500</a></div>
-            <div class="square"><a href="modal.html" id="button">500</a></div>
+            <div class="square" id="0500">500</div>
+            <div class="square" id="1500">500</div>
+            <div class="square" id="2500">500</div>
+            <div class="square" id="3500">500</div>
+            <div class="square" id="4500">500</div>
         </div>
-    
-</container>
-</body>
+
+    </container>
+        </body>
 
 
 <script src="project1.js"></script> 
