Figured out how to add radio button.

--- a/index.html
+++ b/index.html
@@ -14,19 +14,16 @@
 
             <div class="modal">
 
-                <div class="question">
-                </div>
-                <div class="answer1">
-                        hgjhkj
-                </div>
-                <div class="answer2">
-                        hgjhkj
-                </div>
-                <div class="answer3">
-                        hgjhkj
+                <div class="question"></div>
+                <div class="Solution">
+                        <form action="" method="post">
+                    <div class="answer1"></div><input type="radio" name="choose" value="answer1">
+                    <div class="answer2"></div><input type="radio" name="choose" value="answer2">
+                    <div class="answer3"></div><input type="radio" name="choose" value="answer3">
+                        </form>
                 </div>
             </div>
-
+        
         </div>
 
     <header>
