Added submit button.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                     <div class="answer1"></div><input type="radio" name="choose" value="answer1">
                     <div class="answer2"></div><input type="radio" name="choose" value="answer2">
                     <div class="answer3"></div><input type="radio" name="choose" value="answer3">
+                    <button name="submit">
+                            <strong>Submit</strong>
+                          </button>
                         </form>
                 </div>
             </div>
