--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     </header>
     <div class="score"><p>Score</p>0</div>
         <div class="topics">
-            <div class="topics">LIQUIDS</div>
-            <div class="topics">SOLIDS</div>
-            <div class="topics">FOODS</div>
-            <div class="topics">sdfjsakhkjfd</div>
-            <div class="topics">sdjflawchslhaf</div>
+            <div class="topics">NATURE</div>
+            <div class="topics">FOOD</div>
+            <div class="topics">TECHNOLOGY</div>
+            <div class="topics">ANIMALS</div>
+            <div class="topics">WEATHER</div>
         </div>
 
         
