--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="score"><p>Score</p>0</div>
         <div class="topics">
             <div class="topics">NATURE</div>
-            <div class="topics">FOOD</div>
+            <div class="topic">FOOD</div>
             <div class="topics">TECHNOLOGY</div>
             <div class="topics">ANIMALS</div>
             <div class="topics">WEATHER</div>
