Added more styling to css.

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <header>
         <h1>Jeopardy</h1>
     </header>
-    <div class="score"><p>Score</p>0</div>
+    <div class="score"><p>Score:</p>0</div>
         <div class="topics">
             <div class="topics">NATURE</div>
-            <div class="topic">FOOD</div>
             <div class="topics">TECHNOLOGY</div>
+            <div class="topics">FOOD</div>
             <div class="topics">ANIMALS</div>
             <div class="topics">WEATHER</div>
         </div>
